@@ -1,9 +1,11 @@
 DIST upkern-2.0.11.tar.bz2 9820 RMD160 025d799d672ee4cb0b48ae7d4a9f1742a6169fd0 SHA1 5715de71573e1c74b602832ece95abf591019ca2 SHA256 205a6ed5d04ae94c849253f189296de40a29a7314e0b3fd6c5102c46bb4e7b8e
 DIST upkern-3.0.0.tar.bz2 16161 RMD160 db2759231f710b0e96231f2054fe4678cc9e83b8 SHA1 9b8e24f8a7c441b39e11b3e67d0d91d6e21d47a1 SHA256 3f4ad2dcdd3b0570987df8582cf4f9108c9b47170df3fcb2417cb07305eff9e6
 DIST upkern-3.1.0.tar.bz2 16289 RMD160 bb66fffbf90ea8f785d01421a2aff5cda2e075ff SHA1 4204c10228b554ec6dffb0539b0e78329c31bfb5 SHA256 2c4f04cc0f295abd18c6f1d4092130c7ffa355f89dca8fde8c5a64c0b039dc97
+DIST upkern-3.1.2.tar.bz2 17055 RMD160 bca389ef745dbaeb157c6d5f0ba208cf2e5f3aaf SHA1 2efbd34186e892294842480aedaad7c80676f966 SHA256 e976630f6d7a786ce5480432b544282c9b92a46503806bd6286a6f9f4ff685d0
 EBUILD upkern-2.0.11-r1.ebuild 665 RMD160 a1a14bd155a9e26ab94aaad3881ba3e96e1e77ec SHA1 90f2bcd6a4036b4e8833412f40e6c3ef398798a4 SHA256 1ef3d185b789c430ed9d8bac1e5cad256dc5523b30b60885ef164d6374bef879
 EBUILD upkern-2.0.11.ebuild 593 RMD160 c2f78cb0cacd5d6827d0e6f84526b12d338971fb SHA1 24c439b244534c8b6bdf240c5738e0eefedfb45b SHA256 4df11e3dd098605b98af3f2b5bc31b9bd1bcf444bb32c9b1806cb9e878276b36
 EBUILD upkern-3.0.0.ebuild 770 RMD160 e8b32dfb8eaac498dfa6ccb88c92652c09414d8a SHA1 f3c91adfb44ef5e33021e7e2f28bc4c09623caad SHA256 eb1ce2825dbf2358d9477770fba3a584ea750e482c984da736e4432ccef2b309
 EBUILD upkern-3.1.0.ebuild 734 RMD160 7ea7276a75bc8ad54055bb9eba262c3c6e17d672 SHA1 86b71cda3068922dc46eba6fdd2daf412f2784e7 SHA256 ee60e2bec35c0aacd86628984252af272e5d83f38763d3a13d9d895659e12be2
-MISC ChangeLog 539 RMD160 c4b5a1ea60734d33cfd3d258bbdd06321e906b3a SHA1 5e3f132500955fbbb76f754af4f57fb558698403 SHA256 ff580b134300e5a5d066da9869d04244707b856369d30b72daf7b78a201c8d47
+EBUILD upkern-3.1.2.ebuild 734 RMD160 7ea7276a75bc8ad54055bb9eba262c3c6e17d672 SHA1 86b71cda3068922dc46eba6fdd2daf412f2784e7 SHA256 ee60e2bec35c0aacd86628984252af272e5d83f38763d3a13d9d895659e12be2
+MISC ChangeLog 662 RMD160 a3fca898308d9047dc730cf6f90db9409d348eb8 SHA1 04a3ff9656f68a475e4351fc3865068be7027cc4 SHA256 8cce6dd6971535341218bbce55618d10609782b92f67816a34712b980d6718fb
 MISC metadata.xml 405 RMD160 a97224d51d49407236780494c188ecd441fd919c SHA1 3d9c627583480affd484ac0b1812c75078c2d27f SHA256 cd20665d6d4bcbf01de020e45ea7268c9f8149d179f64228ac18113de0b533f7
